# mspaint

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
example_data/: example_2d_plot_data.csv  example_xic_data.pt  peak_16_27.csv  peak_16_34.csv  peak_27_36.csv  peak_34_36.csv
mspaint/: functions.py  plotter.py
tests/: __init__.py  conftest.py  test_bpc_plot.py  test_functions.py  test_mirror_plot.py  test_plotter.py  test_tic_plot.py  test_xic_plot.py
tests/snapshots/: snap_test_bpc_plot.py  snap_test_mirror_plot.py  snap_test_tic_plot.py  snap_test_xic_plot.py
